# transfermace

./: LICENSE  README.md  pyproject.toml
scripts/: run_train.py
transfermace/modules/: __init__.py  models.py
transfermace/tools/: arg_parser.py
